crates/test-ui/ui/invalid_option_encode_impl_ref.stderr
error[E0080]: evaluation panicked: invalid OptionEncode + RefEncode implementation
 --> $WORKSPACE/crates/objc2/src/encode.rs
  |
  |             panic!("invalid OptionEncode + RefEncode implementation");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<std::option::Option<MyType> as objc2::RefEncode>::ENCODING_REF` failed here

note: erroneous constant encountered
  --> ui/invalid_option_encode_impl_ref.rs
   |
   |     assert_eq!(<Option<MyType>>::ENCODING_REF, MyType::ENCODING_REF);
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> ui/invalid_option_encode_impl_ref.rs
   |
   |     assert_eq!(<Option<MyType>>::ENCODING_REF, MyType::ENCODING_REF);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this note originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
